fix: move Geoapify API key to environment variables

--- a/mobile/.env.example
+++ b/mobile/.env.example
@@ -2,3 +2,7 @@
 # Get these from: https://supabase.com/dashboard/project/YOUR_PROJECT/settings/api
 EXPO_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
 EXPO_PUBLIC_SUPABASE_ANON_KEY=your-anon-key-here
+
+# Geoapify Configuration
+# Get this from: https://myprojects.geoapify.com/
+EXPO_PUBLIC_GEOAPIFY_API_KEY=your-geoapify-key-here
