--- a/admin/.env.example
+++ b/admin/.env.example
@@ -2,3 +2,7 @@
 # Get these from: https://supabase.com/dashboard/project/YOUR_PROJECT/settings/api
 NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key-here
+
+# Geoapify Configuration
+# Get this from: https://myprojects.geoapify.com/
+NEXT_PUBLIC_GEOAPIFY_API_KEY=your-geoapify-key-here
